# rename-imports

./: Cargo.toml  README.md
src/: args.rs  errors.rs  files.rs  lib.rs  main.rs  my_error.rs
test_data/ts_project/: .gitignore
test_data/ts_project/src/: App.tsx
test_data/ts_project/src/dir1/aSubdir/: submod1.ts
tests/: integration_tests.rs
tests/common/: mod.rs
tests_data/ts_project/: README.md
tests_data/ts_project/src/dir1/: mod1.ts
tests_data/ts_project/src/dir2/: mod2.ts
