[package]
name = "rename_imports"
version = "0.1.0"
authors = ["Sebastien Michaud <sebastien.michaud.2@gmail.com>"]
edition = "2021"
description = "WIP: Learning rust by implementing an import renaming tool"
keywords = ["import", "imports", "refactoring", "renaming"]
repository = ""
licence = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
