[package]
name = "rename_imports"
version = "0.1.0"
authors = ["Sebastien Michaud <sebastien.michaud.2@gmail.com>"]
edition = "2021"
description = "WIP: Learning rust by implementing an import renaming tool"
repository = "https://github.com/smichaud/rename-imports.git"
license = "MIT OR Apache-2.0"
keywords = ["import", "imports", "refactoring", "renaming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
ignore = "0.4.20"
pathdiff = "0.2.1"
walkdir = "2.3.2"
